tests/fail/docs/xml/meson.build
configure_file(
  input: join_paths(srcdir, 'tests', 'gtkdocentities.ent.in'),
  output: 'gtkdocentities.ent',
  configuration: binary_in,
)
